--- a/src/content/docs/de/dashboard.mdx
+++ b/src/content/docs/de/dashboard.mdx
@@ -29,14 +29,30 @@ Auf der Seite "Meeting Defaults" im Menü "Settings" können Sie globale Standar
 * Bevorzugte automatische Bildbeschreibung
 * Ob das Herunterladen von Folien erlaubt werden soll
 
-### Organisationsmanagement (admin)
+### Verwaltung von Organisationsmitgliedern (Unternehmen)
 
-Wenn Sie auf die Schaltfläche "Organisation" klicken, wird ein Link "Mitglieder" angezeigt. Auf dieser Seite können Sie der Organisation Mitglieder hinzufügen und bestehende Mitglieder verwalten.
+Wenn Sie die Schaltfläche "Organisation" in der Navigationsleiste des Dashboards aktivieren, wird ein Menü mit Optionen für die Verwaltung von Organisationen und Mitgliedern angezeigt. Auf der Seite "Mitglieder" werden alle Mitglieder Ihrer Organisation aufgelistet. Alle Mitglieder können ihre Rolle, Abteilung und ihren Namen ändern, und jedes Mitglied kann deaktiviert oder aus einer Organisation entfernt werden, mit Ausnahme des Eigentümers der Organisation. Beachten Sie, dass die Deaktivierung eines Mitglieds dazu führt, dass sein Konto nicht mehr funktionsfähig ist, während sein Datensatz erhalten bleibt.
 
 #### Hinzufügen von Mitgliedern
 
-Um ein Mitglied hinzuzufügen, geben Sie einfach seine E-Mail-Adresse in das Feld "E-Mail-Adresse" ein, wählen Sie seine Rolle im Dropdown-Menü und klicken Sie dann auf die Schaltfläche "Hinzufügen".
+Das Hinzufügen von Mitgliedern ist so einfach wie das Eingeben ihrer E-Mail-Adresse, das Auswählen ihrer Rolle (Benutzer oder Administrator), das optionale Eingeben ihres Namens und das Auswählen ihrer Abteilung, falls eine solche erstellt wurde.
+Wenn Sie mehrere Mitglieder hinzufügen möchten, können Sie das Bearbeitungsfeld "Mitglieder" verwenden, um eine Massenaddition durchzuführen. Dieses Feld kann mehrere Textzeilen enthalten, so dass Sie die Informationen zu jedem Mitglied in eine eigene Zeile eingeben können. In jeder Zeile können Sie entweder eine einzelne E-Mail-Adresse oder eine E-Mail-Adresse und einen Namen in dem Format eingeben:  
+*email@example.com Unbekannter*
 
-#### Vorhandene Benutzer verwalten
+Wenn Sie fertig sind, klicken Sie auf die Schaltfläche "Hinzufügen". 
 
-Neben jedem Benutzer befinden sich zwei Schaltflächen. Mit der einen können Sie die Rolle des Benutzers ändern, mit der anderen können Sie ihn aus der Organisation löschen.
+#### Abteilungen
+
+Abteilungen ermöglichen es Ihnen, Mitglieder nach den verschiedenen Gruppen Ihrer Organisation zu organisieren.
+
+Um eine Abteilung hinzuzufügen, geben Sie ihren Namen in das Eingabefeld "Name" unter der Überschrift "Abteilung erstellen" ein.
+
+#### Mitgliederdaten exportieren
+
+Die Mitgliederliste in Ihrer Organisation kann als CSV-Datei exportiert werden. Um den Export herunterzuladen:
+1. Wählen Sie das Feldtrennzeichen, das die Spalten der Datei trennen soll. Die verfügbaren Optionen sind:
+    * komma
+    * Semikolon
+    * Tabulator
+1. Aktivieren Sie die Schaltfläche "Herunterladen".
+
