--- a/src/content/docs/en/dashboard.mdx
+++ b/src/content/docs/en/dashboard.mdx
@@ -29,14 +29,30 @@ The Meeting Defaults page, located under the Settings menu, allows you to set gl
 * Automatic image description preference
 * Whether to allow the downloading of slides
 
-### Organization Management (admin)
+### Managing Organization Members (Enterprise)
 
-Clicking the "Organization" button reveals a "Members" link. This page allows you to add members to the organization, as well as manage existing members.
+Activating the "Organization" button in the dashboard's navigation bar will reveal a menu of options related to organization and member management. The "Members" page will list all the members in your organization. All members can have their role, department and name modified, and any member can be deactivated or removed from an organization except for the organization owner. Note that deactivating a member will render their account inoperable while retaining its record.
 
 #### Adding Members
 
-To add a member, simply enter their email into the "email Address" box, select their role in the dropdown, then click the "add" button.
+Adding members is as simple as entering their email address, selecting their role (user or administrator), optionally entering their name, and selecting their department if one has been created.
+If you have multiple members to add, you can use the "Members" edit field to perform a bulk add. This edit field accepts multiple lines of text, allowing you to enter each member's information on a separate line. On each line, you may enter either a single email address, or an email address and a name in the format:  
+*email@example.com John Doe*
 
-#### Managing Existing users
+Once you are finished, click the "Add" button. 
 
-Next to each user, there are two buttons. One allows you to switch their role, while the other deletes them from the organization.
+#### Departments
+
+Departments allow you to organize members according to the various groups of your organization.
+
+To add a department, enter its name in the "Name" edit box under the "Create department" heading.
+
+#### Member Data export
+
+The member list in your organization can be exported as a CSV file. In order to download the export:
+1. Choose the field separator that will separate the columns of the file. The available options include:
+    * comma
+    * Semicolon
+    * Tab
+1. Activate the "Download" button.
+
