--- a/src/content/docs/es/dashboard.mdx
+++ b/src/content/docs/es/dashboard.mdx
@@ -29,14 +29,30 @@ La página Valores predeterminados de la reunión, situada en el menú Configura
 * Preferencia de descripción automática de imágenes
 * Permitir o no la descarga de diapositivas
 
-### Gestión de la organización (admin)
+### Gestión de los Miembros de la Organización (Empresa)
 
-Al hacer clic en el botón "Organización" aparece el enlace "Miembros". Esta página le permite añadir miembros a la organización, así como gestionar los miembros existentes.
+Al activar el botón "Organización" en la barra de navegación del panel de control, aparecerá un menú de opciones relacionadas con la gestión de la organización y los miembros. La página "Miembros" mostrará una lista de todos los miembros de su organización. Todos los miembros pueden modificar su función, departamento y nombre, y cualquier miembro puede ser desactivado o eliminado de una organización, excepto el propietario de la organización. Tenga en cuenta que la desactivación de un miembro dejará inoperativa su cuenta, aunque conservará su registro.
 
 #### Añadir miembros
 
-Para añadir un miembro, basta con introducir su dirección de correo electrónico en la casilla "Dirección de correo electrónico", seleccionar su función en el menú desplegable y hacer clic en el botón "Añadir".
+Añadir miembros es tan sencillo como introducir su dirección de correo electrónico, seleccionar su función (usuario o administrador), introducir opcionalmente su nombre y seleccionar su departamento si se ha creado uno.
+Si tiene que añadir varios miembros, puede utilizar el campo de edición "Miembros" para realizar una adición masiva. Este campo de edición acepta varias líneas de texto, lo que le permite introducir la información de cada miembro en una línea separada. En cada línea, puede introducir una sola dirección de correo electrónico, o una dirección de correo electrónico y un nombre en el formato:  
+*email@example.com Juan Pérez*
 
-#### Gestión de usuarios existentes
+Cuando haya terminado, pulse el botón "Añadir". 
 
-Junto a cada usuario, hay dos botones. Uno le permite cambiar su rol, mientras que el otro lo elimina de la organización.
+#### Departamentos
+
+Los departamentos le permiten organizar a los miembros según los distintos grupos de su organización.
+
+Para añadir un departamento, introduzca su nombre en el cuadro de edición "Nombre" situado bajo el epígrafe "Crear departamento".
+
+#### Exportación de datos de afiliados
+
+La lista de miembros de su organización puede exportarse como archivo CSV. Para descargar la exportación:
+1. Elija el separador de campos que separará las columnas del archivo. Las opciones disponibles son
+    * coma
+    * Punto y coma
+    * Tabulación
+1. Activar el botón "Descargar".
+
