--- a/src/content/docs/fr/dashboard.mdx
+++ b/src/content/docs/fr/dashboard.mdx
@@ -29,14 +29,30 @@ La page Paramètres de la réunion, située dans le menu Paramètres, vous perme
 * Préférence de description automatique des images
 * Autoriser ou non le téléchargement des diapositives
 
-### Gestion de l'organisation (admin)
+### Gestion des membres de l'organisation (entreprise)
 
-En cliquant sur le bouton "Organisation", un lien "Membres" apparaît. Cette page vous permet d'ajouter des membres à l'organisation et de gérer les membres existants.
+L'activation du bouton "Organisation" dans la barre de navigation du tableau de bord fait apparaître un menu d'options relatives à la gestion de l'organisation et des membres. La page "Membres" répertorie tous les membres de votre organisation. Tous les membres peuvent voir leur rôle, leur département et leur nom modifiés, et tout membre peut être désactivé ou supprimé d'une organisation, à l'exception du propriétaire de l'organisation. Notez que la désactivation d'un membre rendra son compte inopérant tout en conservant son enregistrement.
 
-#### Ajout de membres
+#### Ajouter des membres
 
-Pour ajouter un membre, il suffit de saisir son adresse électronique dans le champ "Adresse électronique", de sélectionner son rôle dans la liste déroulante, puis de cliquer sur le bouton "Ajouter".
+Pour ajouter des membres, il suffit de saisir leur adresse électronique, de sélectionner leur rôle (utilisateur ou administrateur), de saisir éventuellement leur nom et de sélectionner leur département s'il en a été créé un.
+Si vous avez plusieurs membres à ajouter, vous pouvez utiliser le champ d'édition "Membres" pour effectuer un ajout en masse. Ce champ d'édition accepte plusieurs lignes de texte, ce qui vous permet de saisir les informations relatives à chaque membre sur une ligne distincte. Sur chaque ligne, vous pouvez saisir soit une seule adresse électronique, soit une adresse électronique et un nom au format :  
+*email@example.com John Doe*
 
-#### Gérer les utilisateurs existants
+Une fois que vous avez terminé, cliquez sur le bouton "Ajouter". 
 
-À côté de chaque utilisateur, il y a deux boutons. L'un d'eux vous permet de modifier leur rôle, tandis que l'autre les supprime de l'organisation.
+#### Départements
+
+Les départements vous permettent d'organiser les membres en fonction des différents groupes de votre organisation.
+
+Pour ajouter un département, saisissez son nom dans la boîte d'édition "Nom" sous la rubrique "Créer un département".
+
+#### Exportation des données des membres
+
+La liste des membres de votre organisation peut être exportée sous la forme d'un fichier CSV. Pour télécharger l'exportation :
+1. Choisissez le séparateur de champs qui séparera les colonnes du fichier. Les options disponibles sont les suivantes
+    * virgule
+    * Point-virgule
+    * Tabulation
+1. Activer le bouton "Télécharger".
+
