--- a/src/content/docs/it/dashboard.mdx
+++ b/src/content/docs/it/dashboard.mdx
@@ -29,14 +29,30 @@ La pagina Predefiniti riunione, che si trova nel menu Impostazioni, consente di 
 * Preferenza per la descrizione automatica delle immagini
 * Se consentire il download delle diapositive
 
-### Gestione dell'organizzazione (admin)
+### Gestione dei membri dell'organizzazione (Enterprise)
 
-Facendo clic sul pulsante "Organizzazione" si accede al link "Membri". Questa pagina consente di aggiungere membri all'organizzazione e di gestire i membri esistenti.
+Attivando il pulsante "Organizzazione" nella barra di navigazione della dashboard, si apre un menu di opzioni relative all'organizzazione e alla gestione dei membri. La pagina "Membri" elenca tutti i membri dell'organizzazione. Tutti i membri possono essere modificati nel ruolo, nel reparto e nel nome e tutti i membri possono essere disattivati o rimossi da un'organizzazione, tranne il proprietario dell'organizzazione. Si noti che la disattivazione di un membro renderà il suo account inutilizzabile, pur conservando il suo record.
 
 #### Aggiunta di membri
 
-Per aggiungere un membro, è sufficiente inserire il suo indirizzo e-mail nella casella "Indirizzo e-mail", selezionare il suo ruolo nel menu a discesa e fare clic sul pulsante "Aggiungi".
+Per aggiungere un membro è sufficiente inserire il suo indirizzo e-mail, selezionare il suo ruolo (utente o amministratore), inserire facoltativamente il suo nome e selezionare il suo reparto, se è stato creato.
+Se si devono aggiungere più membri, si può usare il campo di modifica "Membri" per eseguire un'aggiunta in blocco. Questo campo di modifica accetta più righe di testo, consentendo di inserire le informazioni di ciascun membro su una riga separata. Su ogni riga è possibile inserire un singolo indirizzo e-mail o un indirizzo e-mail e un nome nel formato:  
+*email@example.com John Doe*
 
-#### Gestione degli utenti esistenti
+Al termine, fare clic sul pulsante "Aggiungi". 
 
-Accanto a ciascun utente sono presenti due pulsanti. Uno consente di cambiare il ruolo dell'utente, mentre l'altro lo elimina dall'organizzazione.
+#### Reparti
+
+I dipartimenti consentono di organizzare i membri in base ai vari gruppi dell'organizzazione.
+
+Per aggiungere un reparto, inserire il suo nome nella casella di modifica "Nome" sotto la voce "Crea reparto".
+
+#### Esportazione dei dati dei soci
+
+L'elenco dei membri dell'organizzazione può essere esportato come file CSV. Per scaricare l'esportazione:
+1. Scegliere il separatore di campo che separerà le colonne del file. Le opzioni disponibili sono:
+    * virgola
+    * Punto e virgola
+    * Tab
+1. Attivare il pulsante "Download".
+
