--- a/src/content/docs/nl/dashboard.mdx
+++ b/src/content/docs/nl/dashboard.mdx
@@ -29,14 +29,30 @@ Op de pagina Meeting Defaults, in het menu Instellingen, kunt u globale standaar
 * Voorkeur voor automatische beschrijving van afbeeldingen
 * Het downloaden van dia's toestaan
 
-### Organisatiebeheer (admin)
+### Organisatieleden beheren (Enterprise)
 
-Als je op de knop "Organisatie" klikt, verschijnt de link "Leden". Op deze pagina kun je leden aan de organisatie toevoegen en bestaande leden beheren.
+Als je de knop "Organisatie" in de navigatiebalk van het dashboard activeert, verschijnt er een menu met opties voor organisatie- en ledenbeheer. De pagina "Leden" geeft een overzicht van alle leden in je organisatie. Alle leden kunnen hun rol, afdeling en naam wijzigen en elk lid kan worden gedeactiveerd of verwijderd uit een organisatie, behalve de eigenaar van de organisatie. Merk op dat het deactiveren van een lid zijn of haar account onbruikbaar maakt, terwijl de gegevens wel bewaard blijven.
 
 #### Leden toevoegen
 
-Om een lid toe te voegen, voer je gewoon zijn e-mailadres in het vak "e-mailadres" in, selecteer je zijn rol in de vervolgkeuzelijst en klik je vervolgens op de knop "toevoegen".
+Leden toevoegen is zo eenvoudig als het invoeren van hun e-mailadres, het selecteren van hun rol (gebruiker of beheerder), het optioneel invoeren van hun naam en het selecteren van hun afdeling als er een is aangemaakt.
+Als u meerdere leden wilt toevoegen, kunt u het bewerkingsveld "Leden" gebruiken om een bulktoevoeging uit te voeren. Dit bewerkingsveld accepteert meerdere regels tekst, zodat u de informatie van elk lid op een aparte regel kunt invoeren. Op elke regel kunt u één e-mailadres invoeren of een e-mailadres en een naam in de indeling:  
+*email@example.com John Doe*
 
-#### Bestaande gebruikers beheren
+Als je klaar bent, klik je op de knop "Toevoegen". 
 
-Naast elke gebruiker staan twee knoppen. Met de ene kun je hun rol wijzigen, met de andere kun je ze verwijderen uit de organisatie.
+#### Afdelingen
+
+Met afdelingen kun je leden indelen volgens de verschillende groepen van je organisatie.
+
+Om een afdeling toe te voegen, voert u de naam in het bewerkingsvak "Naam" in onder de kop "Afdeling aanmaken".
+
+#### Export van ledengegevens
+
+De ledenlijst van uw organisatie kan worden geëxporteerd als CSV-bestand. Om de export te downloaden:
+1. Kies het veldscheidingsteken dat de kolommen van het bestand zal scheiden. De beschikbare opties zijn:
+    * komma
+    * Puntkomma
+    * Tab
+1. Activeer de knop "Downloaden".
+
