--- a/src/content/docs/pt/dashboard.mdx
+++ b/src/content/docs/pt/dashboard.mdx
@@ -29,14 +29,30 @@ A página Meeting Defaults (Padrões de reunião), localizada no menu Settings (
 * Preferência de descrição automática da imagem
 * Permitir ou não o download de slides
 
-### Gerenciamento da organização (admin)
+### Gerenciando membros da organização (Enterprise)
 
-Clicar no botão "Organization" (Organização) revela um link "Members" (Membros). Essa página permite adicionar membros à organização, bem como gerenciar os membros existentes.
+A ativação do botão "Organization" (Organização) na barra de navegação do painel revelará um menu de opções relacionadas à organização e ao gerenciamento de membros. A página "Members" (Membros) listará todos os membros de sua organização. Todos os membros podem ter sua função, departamento e nome modificados, e qualquer membro pode ser desativado ou removido de uma organização, exceto o proprietário da organização. Observe que a desativação de um membro tornará a conta dele inoperante, mas manterá o registro.
 
 #### Adição de membros
 
-Para adicionar um membro, basta digitar o e-mail dele na caixa "email Address" (endereço de e-mail), selecionar a função dele no menu suspenso e clicar no botão "add" (adicionar).
+Adicionar membros é tão simples quanto digitar o endereço de e-mail, selecionar a função (usuário ou administrador), opcionalmente digitar o nome e selecionar o departamento, caso tenha sido criado.
+Se você tiver vários membros para adicionar, poderá usar o campo de edição "Members" (Membros) para fazer uma adição em massa. Esse campo de edição aceita várias linhas de texto, permitindo que você insira as informações de cada membro em uma linha separada. Em cada linha, você pode inserir um único endereço de e-mail ou um endereço de e-mail e um nome no formato:  
+*email@example.com John Doe*
 
-#### Gerenciando usuários existentes
+Quando terminar, clique no botão "Add" (Adicionar). 
 
-Ao lado de cada usuário, há dois botões. Um permite que você altere a função do usuário, enquanto o outro o exclui da organização.
+#### Departamentos
+
+Os departamentos permitem que você organize os membros de acordo com os vários grupos da sua organização.
+
+Para adicionar um departamento, digite seu nome na caixa de edição "Name" (Nome) sob o título "Create department" (Criar departamento).
+
+#### Exportação de dados de membros
+
+A lista de membros de sua organização pode ser exportada como um arquivo CSV. Para fazer o download da exportação:
+1. Escolha o separador de campos que separará as colunas do arquivo. As opções disponíveis incluem:
+    * vírgula
+    * Ponto e vírgula
+    * Tabulação
+1. Ativar o botão "Download".
+
