--- a/src/content/docs/sv/dashboard.mdx
+++ b/src/content/docs/sv/dashboard.mdx
@@ -29,14 +29,30 @@ På sidan Mötesstandarder, som finns under menyn Inställningar, kan du ställa
 * Inställning för automatisk bildbeskrivning
 * Huruvida nedladdning av bilder ska tillåtas
 
-### Organisationshantering (admin)
+### Hantera organisationsmedlemmar (Enterprise)
 
-Om du klickar på knappen "Organisation" visas en länk till "Medlemmar". På den här sidan kan du lägga till medlemmar i organisationen och hantera befintliga medlemmar.
+Om du aktiverar knappen "Organisation" i instrumentpanelens navigeringsfält visas en meny med alternativ som rör organisations- och medlemshantering. På sidan "Members" visas en lista över alla medlemmar i din organisation. Alla medlemmar kan få sin roll, sin avdelning och sitt namn ändrade, och alla medlemmar kan inaktiveras eller tas bort från en organisation, förutom organisationens ägare. Observera att om du avaktiverar en medlem kommer kontot att bli obrukbart, men registreringen kommer att finnas kvar.
 
 #### Lägga till medlemmar
 
-För att lägga till en medlem anger du bara dennes e-postadress i rutan "E-postadress", väljer roll i rullgardinsmenyn och klickar sedan på knappen "Lägg till".
+Att lägga till medlemmar är så enkelt som att ange deras e-postadress, välja deras roll (användare eller administratör), eventuellt ange deras namn och välja deras avdelning om en sådan har skapats.
+Om du har flera medlemmar att lägga till kan du använda redigeringsfältet "Members" för att göra ett masstillägg. Det här redigeringsfältet accepterar flera rader med text, så att du kan ange varje medlems information på en separat rad. På varje rad kan du ange antingen en enda e-postadress eller en e-postadress och ett namn i formatet:  
+*email@example.com John Doe*
 
-#### Hantera befintliga användare
+När du är klar klickar du på knappen "Lägg till". 
 
-Bredvid varje användare finns det två knappar. Med den ena kan du byta deras roll, medan den andra raderar dem från organisationen.
+#### Avdelningar
+
+Med hjälp av avdelningar kan du organisera medlemmarna efter de olika grupperna i din organisation.
+
+Du lägger till en avdelning genom att ange dess namn i redigeringsrutan "Namn" under rubriken "Skapa avdelning".
+
+#### Export av medlemsdata
+
+Medlemslistan i din organisation kan exporteras som en CSV-fil. För att ladda ner exporten:
+1. Välj den fältavskiljare som ska separera kolumnerna i filen. De tillgängliga alternativen inkluderar:
+    * komma
+    * Semikolon
+    * Flik
+1. Aktivera knappen "Ladda ner".
+
